2018-10-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwblob.tap: Added a rwblob test to verify that lower-case
	magick works.

	* magick/static.c (OpenModule): Upper case magick string before
	searching static modules list.  Fixes Debian bug 911386
	"libgraphicsmagick-q16-3: graphicsmagick 1.3.30 has made formats
	case-sensitive at the API level".

	* filters/analyze.c (AnalyzeImage): X and y should be unsigned
	long to match image rows/columns type.  Calculate total pixels by
	simple multiplication rather than counting.

2018-10-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Support WebP compression in
	TIFF. This requires a libtiff release after 4.0.9.

	* magick/image.h ("C"): WebPCompression added to CompressionType
	enumeration.

2018-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Configure for the Zstd library.  Use
	--without-zstd to disable searching for this library.  Libtiff may
	require this library to successfully link so static linkage could
	fail if searching for libzstd is disabled.

	* magick/image.h ("C"): ZSTDCompression added to CompressionType
	enumeration.

	* coders/tiff.c (WriteTIFFImage): Support Zstd compression in
	TIFF.  This requires a libtiff release after 4.0.9.

2018-10-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (GMCommandSingle): Add 'compare' to the list of
	command names that gm will support as a command if copied to or
	linked from that name.  There was already a 'compare' link
	installed when the '--enable-magick-compat' configure option is
	used, but it could not possibly function without being blessed by
	this list.  Related to Debian bug #910652
	"graphicsmagick-imagemagick-compat: Doesn't ship a compare tool".

2018-09-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Magick++/Drawable.h: Block unused-private-field
	warnings from Clang due to _dummy members which were intentionally